--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,7 @@
   "name": "onlinemaidan",
   "private": true,
   "dependencies": {
-    "bootstrap": "~3.0.3",
-    "jquery": "",
-    "font-awesome": ""
+    "bootstrap": "~3.0.3"
   },
   "devDependencies": {}
 }
